--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:ital,wght@0,200;0,300;0,400;0,500,600,700;1,500&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
 :root
 {
@@ -17,10 +18,12 @@ body.dark
 }
 body
 {
-    font-family:'poppins'sans-serif;
+    /* font-family:'poppins'sans-serif; */
     line-height: 1.5;
     font-size: 16px;
-    overflow-x: hidden;
+    font-family: 'Inter', sans-serif;
+    overflow-x: hidden;    /*new*/
+    padding: 200px;
 }
 *
 {
@@ -29,6 +32,7 @@ body
     outline:none;
     text-decoration: none;
     box-sizing: border-box;
+    
 }
 ::before,::after
 {
@@ -44,15 +48,17 @@ list-style: none;
     background:var(--bg-black-900);
     min-height: 100vh;
     display:block;
-    padding:0 300px;
+    padding:0 30px;
     opacity: 1;
+    position: fixed;
+    left: 70px;
     top: 0;
     right: 0;
     bottom: 0;
     z-index: 0;
-    overflow: auto;
-    overflow: hidden;
-    transition:all 0,3s ease;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition:all 0.3s ease;
 }
 .section.back-section
 {
@@ -62,13 +68,13 @@ list-style: none;
 {
     z-index: 2;
     opacity: 1;
-    animation: slideSection 3s ease;
+    animation: slideSection 1s ease;
 }
 @keyframes slideSection
 {
-    50% 
+    0% 
     {
-        transform: translateX(40%);
+        transform: translateX(100%);
     }
     100% 
     {
@@ -87,7 +93,7 @@ list-style: none;
 
 .container
 {
-    max-width: 850px;
+    max-width: 1100px;
     width: 100%;
     margin: auto;
     /* margin:auto; space between ATR and image */
@@ -147,11 +153,38 @@ list-style: none;
     padding: 12px 25px;
     color: white;
     border-radius: 40px; /*دايره  في  hire me*/
-    background: var(--skin-color);
+    /* background: var(--skin-color); */
     display: inline-block;
     white-space: nowrap ;
     transition: all 0.3s ease;
+
 }
+.btn:hover {
+    background: #03e9f4;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #03e9f4,
+                0 0 5px #03e9f4,
+                0 0 5px #03e9f4,
+                0 0 5px #03e9f4;
+                
+}
+.btn {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #03e9f4;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 40px;
+    letter-spacing: 4px;
+    background: linear-gradient(#141e30, #243b55);
+}
+
+
 .btn:hover
 {
     transform:scale(1.05) ;
@@ -186,7 +219,7 @@ list-style: none;
     justify-content: center;
     align-items: center;
     border-right:1px solid var(--bg-black-50);
-    transition: all 0,3s ease;
+    transition: all 0.3s ease;
 }
 .ATR .logo
 {
@@ -250,7 +283,7 @@ list-style: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0,3s ease;
+    transition: all 0.3s ease;
 }
 .ATR .nav-toggler span
 {
@@ -271,12 +304,12 @@ list-style: none;
 .ATR .nav-toggler.open span::after
 {
     transform: rotate(-45deg);
-    top: 10px;
+    top: 0px;
 }
 .ATR .nav-toggler.open span::before
 {
     transform: rotate(45deg);
-    top: 10px;
+    top: 0px;
 }
 
 .ATR .nav-toggler span::before
@@ -298,8 +331,8 @@ list-style: none;
     position: absolute;
     top: 20px;
     left: 0px;
-
 }
+
 .ATR .nav 
 {
     margin-top: 100px;/*space between logo and nav */
@@ -386,8 +419,8 @@ h3.my-profession
     width:40px;
     border-bottom: 10px solid var(--skin-color);
     border-right: 10px solid var(--skin-color);
-    right: -340px;
-    bottom: 100px;
+    right: -290px;
+    bottom: 98px;
 }
 .home-img::before
 {
@@ -397,7 +430,7 @@ h3.my-profession
     width:40px;
     border-top: 10px solid var(--skin-color);
     border-left: 10px solid var(--skin-color);
-    left:-20px;
+    left: -13px;
     top:-30px;
 }
 .home .home-img img 
@@ -471,7 +504,7 @@ h3.my-profession
 }
 .about .about-content .personal-info .buttons .btn
 {
-    margin-right: 15px;
+    
     margin-top: 10px; /* margin is space between download cv and Hire Me*/
 }
 .about .about-content .skills
@@ -632,7 +665,7 @@ h3.my-profession
 }
 .service .service-item .service-item-inner:hover
 {
-    box-shadow: 0 0 20px rgb(14, 7, 103);
+    box-shadow: 0 0 20px rgb(236 24 57 / 57%);
 }
 .service .service-item .service-item-inner .icon
 {
@@ -711,7 +744,7 @@ h3.my-profession
 }
 .portfolio .portfolio-item .portfolio-item-inner:hover
 {
-    box-shadow: 0 0 20px rgb(14, 7, 103);
+    box-shadow: 0 0 20px rgb(236 24 57 / 57%);
 }
 .portfolio .portfolio-item-inner .portfolio-img img 
 {
@@ -746,14 +779,16 @@ h3.my-profession
     text-align: center;
     margin-bottom: 60px;
 }
-.contact .contact-info-item:hover .icon
+.contact .contact-info-item .icon
 {
-    background:var(--skin-color);
+    color: #ffffff;
     height: 40px;
     width: 40px;
     border-radius: 50px;
     display: block;
     margin: 0 auto -5px;
+    display: inline-block;
+    padding-right: 55px;
 } 
 
 /* .contact .contact-info-item .contact-info-item:hover .icon .fa
@@ -761,39 +796,48 @@ h3.my-profession
     font-size: 25px;
     color:#ffffff;
 } */
-.contact .contact-info-item .icon
-{
-    display: inline-block;
-}
 .contact .contact-info-item:hover .icon .fa 
 {
     font-size:20px;
-    color:#ffffff;
-    margin-bottom: 3000px;
+    background-color: var(--skin-color);
+    /* margin-bottom: 3000px;
     margin-left: -5px;
     margin-right: 300px;
-    margin-top: 10px;
+    margin-top: 10px; */
+    border-radius: 50px;
+    color:#ffffff;
+    height: 40px;
+    padding: 10px;
+    top:10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
 }
 .contact .contact-info-item .icon .fa
 {
     font-size:25px;
     color:var(--skin-color);
     margin-bottom: 8px;
+    padding-left: 10px;
 }
 .contact .contact-info-item .icon .fa-brands
 {
     font-size:25px;
     color:var(--skin-color);
     margin-bottom: 8px;
+    padding-left: 10px;
 }
 .contact .contact-info-item:hover .icon .fa-brands
 {
     font-size:20px;
     color:#ffffff;
-    margin-bottom: 3000px;
+    /* margin-bottom: 3000px;
     margin-left: 11px;
     margin-right: 300px;
-    margin-top: 10px;
+    margin-top: 10px; */
+    background-color: var(--skin-color);
+    padding: 10px;
+    border-radius: 50px;
 }
 
 
@@ -804,6 +848,7 @@ h3.my-profession
     color:var(--text-black-900);
     text-transform: capitalize;
     margin:5px 0 20px;
+    padding-right: 15px;
 }
 .contact .contact-info-item p 
 {
@@ -811,6 +856,7 @@ h3.my-profession
     line-height:25px;
     color:var(--text-black-700);
     font-weight: 400;
+    padding-right: 15px;
 }
 .contact .contact-form
 {
@@ -845,7 +891,7 @@ h3.my-profession
 }
 .contact .contact-form .form-item .form-control:focus
 {
-    box-shadow: 0 0 20px rgba(48 , 46 , 77 , 0.15);
+    box-shadow: 0 0 20px rgb(236 24 57 / 57%);
 }
 .contact .contact-form .form-item  textarea.form-control
 {
@@ -856,8 +902,9 @@ h3.my-profession
     height: 50px;
     padding: 0 50px;
 }
-@media (max-width: 1175px)
+@media (max-width: 1199px)
 {
+    
     .ATR
     {
         left: -270px;
@@ -865,15 +912,12 @@ h3.my-profession
     .ATR.open
     {
         left: 0;
+        
     }
     .ATR .nav-toggler
     {
         display: flex;
-        left: 30px;
-    }
-    .ATR .nav-toggler
-    {
-        left: 300px;
+        left: 10px;
     }
     .section
     {
@@ -881,7 +925,11 @@ h3.my-profession
     }
     .section.open
     {
-        left: 270;
+        left: 210px;
+    }
+    .ATR .nav-toggler.open
+    {
+        left: 230px;
     }
     .about .about-content .personal-info .info-item p span
     {
@@ -898,6 +946,7 @@ h3.my-profession
         flex: 0 0 50%;
         max-width: 50%;
     }
+    
     .about .about-content .education,
     .home .home-info
     {
@@ -925,4 +974,3 @@ h3.my-profession
         
     }
 }
-
