--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,11 @@ h3.my-profession
     color:var(--text-black-900);
     text-transform: capitalize;
 }
+.about .about-content .skills .skill-item h5 span
+{
+     margin-left: 84px;
+    color: var(--skin-color);
+}
 .about .about-content .skills .skill-item .progress
 {
     background-color:var(--bg-black-50);
