--- a/css/style.css
+++ b/css/style.css
@@ -530,12 +530,9 @@ h3.my-profession
     font-weight: 600;
     color:var(--text-black-900);
     text-transform: capitalize;
+    text-align: center;
 }
-.about .about-content .skills .skill-item h5 span
-{
-     margin-left: 84px;
-    color: var(--skin-color);
-}
+
 .about .about-content .skills .skill-item .progress
 {
     background-color:var(--bg-black-50);
