--- a/css/style.css
+++ b/css/style.css
@@ -526,9 +526,9 @@ h3.my-profession
 .about .about-content .skills .skill-item h5
 {
     line-height: 40px;
-    font-size:16px;
+    font-size: 16px;
     font-weight: 600;
-    color:var(--text-black-900);
+    color: var(--skin-color);
     text-transform: capitalize;
     text-align: center;
 }
@@ -616,21 +616,21 @@ h3.my-profession
     position:absolute;
     left:0;
     top:0;
-    height:15px;
-    width:15px;
-    border-radius:50%;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
     background-color:var(--skin-color)
 }
 .about .about-content .timeline .timeline-data
 {
     font-weight: 400;
-    font-size:14px;
-    margin-bottom:12px;
-    color:var(--text-black-700)
+    font-size: 14px;
+    margin-bottom: 12px;
+    color: var(--skin-color);
 }
 .about .about-content .timeline .timeline-data
 {
-    margin-right:5px;
+    margin-right: 5px;
 }
 .about .about-content .timeline .timeline-title
 {
