--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -34,10 +34,12 @@
 .style-switcher .style-switcher-toggler
 {
     top: 0;
+    left: -61;
 }
 .style-switcher .day-night
 {
     top: 53px;
+    left: -61;
 }
 .style-switcher h4
 {
