--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ list-style: none;
     position: relative;
     display: inline-block;
     padding: 10px 20px;
-    color: #03e9f4;
+    color: var(--skin-color);
     font-size: 16px;
     text-decoration: none;
     text-transform: uppercase;
@@ -321,7 +321,7 @@ list-style: none;
     width: 18px;
     background: var(--skin-color);
     position : absolute;
-    top: 10px;
+    top: -6px;
     left: 0px;
 }
 .ATR .nav-toggler span::after
@@ -331,7 +331,7 @@ list-style: none;
     width: 18px;
     background: var(--skin-color);
     position: absolute;
-    top: 20px;
+    top: 6px;
     left: 0px;
 }
 
