--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+/* @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:ital,wght@0,200;0,300;0,400;0,500,600,700;1,500&display=swap'); */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap");
 :root {
 	--bg-black-900: #f2f2fc;
@@ -148,7 +148,7 @@ ul {
 	position: relative;
 	display: inline-block;
 	padding: 10px 20px;
-	/* color: #03e9f4; */
+	color: #03e9f4;
 	color: var(--skin-color);
 	font-size: 16px;
 	text-decoration: none;
@@ -157,7 +157,7 @@ ul {
 	transition: 0.5s;
 	margin-top: 40px;
 	letter-spacing: 4px;
-	background: linear-gradient(#141e30, #243b55);
+	background: linear-gradient(#141e30, #243b55); 
 }
 
 .btn:hover {
